force-app/main/default/objects/CommercientSF__SalArea__c/CommercientSF__SalArea__c.object-meta.xml
<CustomObject>
    <label>Syspro Area</label>
    <nameField>
        <label>Syspro Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>