force-app/main/default/objects/CommercientSF__SalArea__c/fields/CommercientSF__AreaGstCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AreaGstCode__c</fullName>
    <label>Geographic area GST code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>