force-app/main/default/objects/CommercientSF__SalArea__c/fields/CommercientSF__Areas__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Areas__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>