force-app/main/default/objects/CommercientSF__SalArea__c/fields/CommercientSF__ProvTaxFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ProvTaxFlag__c</fullName>
    <label>Provincial tax calculated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>