force-app/main/default/objects/CommercientSF__SalArea__c/fields/CommercientSF__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxCode__c</fullName>
    <label>Geographic area tax code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>